# codebase-gardener

./: .env.example  .gitignore  .mcp.json  AGENTS.md  GARDENER.md  Makefile  README.md  compose.yaml  open-questions-and-clarifying-answers.md  package.json  pnpm-lock.yaml  pyproject.toml
.codex/: config.toml
analysis_engine/: pyproject.toml
analysis_engine/src/gardener_analysis/: __init__.py  constitution.py  discovery.py  drift.py  entropy.py  fixtures.py  foundation.py  opportunities.py  repowise.py
analysis_engine/tests/: test_constitution.py  test_discovery.py  test_drift.py  test_entropy.py  test_fixture_repositories.py  test_foundation.py  test_opportunities.py  test_repowise.py
backend/: celerybeat-schedule.db  pyproject.toml  requirements.txt
backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/analysis/: constitution_pr.py  fixtures.py  models.py  runner.py  serializers.py  storage_service.py  urls.py  views.py
backend/apps/analysis/migrations/: 0001_initial.py  0002_repositoryanalysis_baseline_promoted_at_and_more.py
backend/apps/billing/: models.py  serializers.py  services.py  views.py
backend/apps/billing/migrations/: 0001_initial.py  0002_subscription.py
backend/apps/common/: api.py  llm.py  models.py  storage.py
backend/apps/common/migrations/: 0001_initial.py  0002_alter_auditevent_event_type.py  0003_alter_auditevent_event_type.py  0004_alter_auditevent_event_type.py  0005_alter_auditevent_event_type.py  0006_alter_auditevent_event_type.py  0007_alter_auditevent_event_type.py  0008_alter_auditevent_event_type.py  0009_alter_auditevent_event_type.py  0010_alter_auditevent_event_type.py
backend/apps/constitution/: apps.py
backend/apps/entropy/: apps.py
backend/apps/github_app/: apps.py  client.py  models.py  services.py  state.py  tasks.py  urls.py  views.py
backend/apps/github_app/migrations/: 0001_initial.py  0002_githubinstallation_html_url.py  0003_githubwebhookevent.py
backend/apps/maintenance_prs/: ai_fixes.py  apps.py  ci_repair.py  docs_fixes.py  executor.py  manual_plans.py  models.py  planner.py  policy.py  roi.py  tasks.py
backend/apps/maintenance_prs/migrations/: 0001_initial.py  0002_maintenanceprplan_approval_status_and_more.py  0003_maintenanceprplan_confidence_threshold.py  0004_maintenanceprplan_category.py  0005_maintenanceprplan_merge_commit_sha.py  0006_maintenanceprplan_outcome_history_and_more.py  0007_alter_maintenanceprplan_confidence_threshold.py  0007_maintenanceprplan_ci_repair_state.py  0008_maintenanceprplan_ci_repair_state.py
backend/apps/profiles/: learning.py  models.py  sync.py  tasks.py
backend/apps/repositories/: apps.py  models.py  serializers.py  views.py
backend/apps/sessions/: apps.py  lifecycle.py  models.py  tasks.py
backend/apps/triggers/: apps.py  models.py  policy.py  registry.py  serializers.py  service.py  tasks.py  thresholds.py  views.py
backend/config/: celery.py  settings.py  urls.py
backend/tests/: test_ai_fixes.py  test_analysis_runner.py  test_analysis_storage.py  test_api_errors.py  test_billing_subscription.py  test_ci_repair.py  test_constitution_pr.py  test_first_report_api.py  test_gardening_session_worker.py  test_github_app_onboarding.py  test_github_webhooks.py  test_health.py  test_llm.py  test_maintenance_pr_executor.py  test_maintenance_pr_planner.py  test_manual_pr_plans.py  test_pr_outcome_learning.py  test_pr_outcome_webhooks.py  test_product_models.py  test_profile_sync.py  test_repository_automation_api.py  test_repository_complexity.py  test_roi_estimates.py  test_session_triggers.py
(+240 files in other folders)
