[project]
name = "codebase-gardener"
version = "0.1.0"
description = "Autonomous codebase maintenance engineer foundation workspace."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "jsonschema>=4.25.1,<5",
  "pytest>=8.4.2,<9",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend", "analysis_engine"]

