[project]
name = "gardener-analysis"
version = "0.1.0"
description = "Repository intelligence foundation for Codebase Gardener."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gardener_analysis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py", "*_tests.py"]

