[project]
name = "codebase-gardener-backend"
version = "0.1.0"
description = "Django API foundation for Codebase Gardener."
requires-python = ">=3.12,<3.13"
dependencies = [
  "celery>=5.5,<5.6",
  "django-cors-headers>=4.9,<5",
  "django>=5.2,<5.3",
  "django-environ>=0.12,<0.13",
  "djangorestframework>=3.16,<3.17",
  "gardener-analysis",
  "httpx>=0.28,<0.29",
  "jsonschema>=4.25.1,<5",
  "psycopg[binary]>=3.2,<3.3",
  "PyJWT[crypto]>=2.10,<3",
  "referencing>=0.37,<0.38",
  "redis>=6,<7",
  "boto3>=1.43.24",
]

[dependency-groups]
dev = [
  "moto>=5.2.1",
  "pytest>=8.4.2,<9",
  "pytest-django>=4.11,<5",
]

[tool.uv]
package = false

[tool.uv.sources]
gardener-analysis = { workspace = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_tests.py"]
